log
Tue 18 Apr 2023 12:25:18 AM UTC: 
 tests:  1|8
total_score: 0/70
0f96930
Fri 21 Apr 2023 08:29:19 PM UTC: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
7123e3d
Sat 22 Apr 2023 05:58:35 AM UTC: 
 treemap.c | 32 ++++++++++++++++++++++++++++++--
 1 file changed, 30 insertions(+), 2 deletions(-)
 tests:  6|6
total_score: 15/70
172a830
Sat 22 Apr 2023 06:09:43 AM UTC: 
 treemap.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
 tests:  13|5
total_score: 25/70
cad4f09
Sat 22 Apr 2023 06:10:34 AM UTC: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
6fb39ea
Sat 22 Apr 2023 06:12:00 AM UTC: 
 treemap.c | 35 ++++++++++++++++++++++++++++++++++-
 1 file changed, 34 insertions(+), 1 deletion(-)
 tests:  18|3
total_score: 40/70
83065e8
Sat 22 Apr 2023 06:14:27 AM UTC: 
 treemap.c | 46 ++++++++++++++++++++++++++--------------------
 1 file changed, 26 insertions(+), 20 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:128:13: error: ‘TreeNode’ has no member named ‘key’
  128 |         node->key = min->key;
      |             ^~
treemap.c:128:24: error: ‘TreeNode’ has no member named ‘key’
  128 |         node->key = min->key;
      |                        ^~
treemap.c:129:13: error: ‘TreeNode’ has no member named ‘value’
  129 |         node->value = min->value;
      |             ^~
treemap.c:129:26: error: ‘TreeNode’ has no member named ‘value’
  129 |         node->value = min->value;
      |                          ^~
Compilation failed
7797059
Sat 22 Apr 2023 06:15:40 AM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:128:26: error: ‘TreeNode’ has no member named ‘data’
  128 |         Pair* temp = node->data;
      |                          ^~
treemap.c:129:13: error: ‘TreeNode’ has no member named ‘data’
  129 |         node->data = min->data;
      |             ^~
treemap.c:129:25: error: ‘TreeNode’ has no member named ‘data’
  129 |         node->data = min->data;
      |                         ^~
treemap.c:130:12: error: ‘TreeNode’ has no member named ‘data’
  130 |         min->data = temp;
      |            ^~
Compilation failed
a639190
